sbi-manifests/sbi-cms-global-service/sbi-cms/templates/service.yaml
---
# Source: sbi-cms/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sbi-cms-global-service
  namespace: sbi
  labels:
    app: sbi-cms-global-service
  annotations: 
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8050-8050'
    prometheus.io/scrape: 'true'
spec:
  ports:
    - protocol: TCP
      port: 8050
      targetPort: 8050
      name: 8050-8050
  selector:
    app: sbi-cms-global-service
  type: ClusterIP
